--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "i18next": "^25.7.4",
+    "i18next-http-backend": "^3.0.2",
     "immer": "^11.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -29,7 +30,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.0",
-    "react-i18next": "^16.5.2",
+    "react-i18next": "^16.5.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5",
