--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "predev": "node scripts/build-app-runtime.cjs",
     "dev": "next dev -p 3111",
+    "prebuild": "node scripts/build-app-runtime.cjs",
     "build": "next build",
     "start": "next start -p 3111",
-    "lint": "eslint",
+    "gen:enums": "node scripts/build-app-runtime.cjs",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "check": "npm run format:check && npm run lint && npm run typecheck"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -55,6 +63,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "happy-dom": "^20.1.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
